supplement/implementation/examples/negative/undefinedTypeAlias.bgv
let
    foo : X -[m u 0]-> X
    foo x = x
in
unit
